--- a/src/kuronotori.vcxproj.filters
+++ b/src/kuronotori.vcxproj.filters
@@ -45,7 +45,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\Downloads\kuronotori.ico">
+    <Image Include="blackbird.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
